[tool.poetry]
name = "github activity tracker"
version = "0.1.0"
description = ""
authors = ["tomprogramuje <tom.severa@outlook.cz>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
requests = "^2.31.0"
ruff = "^0.3.7"
fastapi = "^0.110.1"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
